--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-          <h1 class="text-center">MSC Orchesta tracker</h1>
+          <h1 class="text-center">MSC Orchestra Tracker</h1>
           <div id="map">
           </div>
       </div>
