--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
+      <div id="title" class="row">  
+        <div class="col-md-12">
           <h1 class="text-center">MSC Orchestra Tracker</h1>
+        </div>
+      </div>
+      <div class="row">
           <div id="map">
           </div>
       </div>
@@ -34,7 +38,7 @@
 
     <!-- Modal -->
     <div class="modal fade" id="details" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
