--- a/data.html
+++ b/data.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
       <div class="row">
           <div class="col-md-12">
-            <h2>Data</h2>
+            <h2>Data <a href="index.html" class="btn btn-sm btn-danger pull-right">Ver mapa</a></h2>
             <table id="data" class="table"></table>
           </div>
       </div>
