--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container-fluid">
       <div id="title" class="row">  
         <div class="col-md-12">
-          <h1 class="text-center">MSC Orchestra Tracker</h1>
+          <h1 class="text-center">MSC Orchestra Tracker <a href="data.html" class="btn btn-sm btn-danger">Ver data</a></h1>
         </div>
       </div>
       <div class="row">
