--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
     <div class="container-fluid">
       <div id="title" class="row">  
         <div class="col-md-12">
-          <h1 class="text-center">MSC Orchestra Tracker <a href="data.html" class="btn btn-sm btn-danger">Ver data</a></h1>
+          <h1 class="text-center">MSC Orchestra Tracker <a href="data.html" class="btn btn-sm btn-default">Ver data</a></h1>
         </div>
       </div>
       <div class="row">
           <div id="map">
           </div>
+      </div>
+      <div id="footer" class="row">  
+        <div class="col-md-12">
+          <p>Toca el marcador rojo para ver más detalles</p>
+        </div>
       </div>
     </div>
 
