--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/main.css?v=3"/>
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -49,9 +49,9 @@
         <p class="data text-left"></p>
         <p class="data-label text-left">Temperatura</p>
       </div>
-      <div id="hum" class="data-container">
+      <div id="wind" class="data-container">
         <p class="data text-right"></p>
-        <p class="data-label text-right">Humedad</p>
+        <p class="data-label text-right"></p>
       </div>
       <div id="footer" class="row">  
         <div class="col-md-12">
@@ -87,7 +87,7 @@
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=3"></script>
     
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv_hNLHEn6d-HHGfEO7l7qyeLOx5l7vsA&callback=initMap">
     </script>
