validate missing name

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div id="temp" class="data-container">
         <p class="data text-left"></p>
-        <p class="data-label text-left">Temperatura</p>
+        <p class="data-label text-left"></p>
       </div>
       <div id="wind" class="data-container">
         <p class="data text-right"></p>
